# icebin

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  README  README.rst  add_license.py  bootstrap  commonmk.am  configme  configure  configure.ac  doxygen.cfg  f90_mod_deps.py  glint2.pc.in  glint2.tag  icebin-devel-GCC-4.9.3.eb  icebin_sample.cdl  index.html  make_grids  makefile  params.json  parse_fconst.py
grids/: CMakeLists.txt  ga_2x2_5.cpp  gridutil.hpp  mar.cpp  modele_ll.cpp  modele_ll_g2x2_5.cpp  modele_ll_g4x5.cpp  overlap.cpp  searise.cpp  searise100.cpp  searise50.cpp  searise_a.cpp  searise_g.cpp  searise_g20.cpp
modele/: CMakeLists.txt  README.txt  Z1QX1N.BS1.F  combine_global_ec.cpp  etopo1_ice.cpp  giss2nc.cpp  global_ec.cpp  icebin22m.cpp  make_merged_topoo.cpp  make_modele_inputs.cpp  make_topo.cpp  make_topo_icebin.cpp  make_topoa.cpp  make_topoo.cpp  oneway.cpp
pyext/: CMakeLists.txt  Grid_py.cpp  Grid_py.hpp  IceSheet_py.cpp  IceSheet_py.hpp  Makefile.am  Makefile.in  MatrixMaker_py.cpp  MatrixMaker_py.hpp  NcFile_py.cpp  PyClass.hpp  _glint2_module.hpp  _glint2_module_py.cpp  _icebin.pyx  example.py  ibmisc.pxd  ibmisc.pyx  ibmisc_cython.hpp  matrix_ops_py.cpp  namespace_ibmisc.pxd  namespace_icebin.pxd  namespace_std.pxd  pyutil.cpp  pyutil.hpp  setup.py
pyext/examples/: make_icebin_in_base.py
pyext/glint2/: Grid.py  __init__.py  cext.py
pyext/icebin/: element_l1.maxima
pyext/icebin/tests/: example_grid.py  example_mesh.py  test_element_l1.py
pylib/: CMakeLists.txt  _icebin.cpp  _icebin.pyx  cicebin.pxd  example.py  ibmisc_cython.cpp  icebin.py  icebin.pyx  icebin_cython.cpp  icebin_cython.hpp
pylib/examples/: make_icebin_in_base.py
pylib/icebin/: __init__.py  element_l1.py  ibgrid.py  ibplotter.py  ibsmoother.py
pylib/icebin/tests/: example_grid.py  test_regrid_l1.py
sbin/: CMakeLists.txt  Makefile.am  Makefile.in  apitest.cpp  blitztest.cpp  desm.cpp  ga_2x2_5.cpp  greenland_2x2_5.cpp  greenland_4x5.cpp  hires.cpp  overlap.cpp  pismr.cpp  searise.cpp  searise100.cpp  searise50.cpp  searise_a.cpp  searise_g.cpp  searise_g20.cpp  searise_grid.cpp  smulttest.cpp  test_grid1.cpp  test_grid2.cpp
slib/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  libglint2_refaddr.cpp  libglint2_refaddr.hpp
slib/boost/: enum.hpp
slib/boost/enum/: base.hpp  bitfield.hpp  iterator.hpp  macros.hpp
slib/galahad/: eqp_c.hpp  eqp_f.f90  ncutil_f.f90  qpt_c.cpp  qpt_c.hpp  qpt_f.f90  x_loc_f.f90  zd11_c.cpp  zd11_c.hpp  zd11_f.f90
slib/giss/: ConstantSet.cpp  ConstantSet.hpp  CooVector.cpp  CooVector.hpp  CouplingContract.cpp  CouplingContract.hpp  Dict.hpp  DynArray.hpp  DynamicEnum.cpp  DynamicEnum.hpp  IndexTranslator.cpp  IndexTranslator.hpp  IndexTranslator2.cpp  IndexTranslator2.hpp  Proj.hpp  Proj2.cpp  Proj2.hpp  RTree.hpp  Sparse2.hpp  SparseAccumulator.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseVector.cpp  SparseVector.hpp  VarMetaData.hpp  VarTransformer.cpp  VarTransformer.hpp  blitz.hpp  cfextract.py  cfnames.cpp  constant.hpp  eigen.hpp  enum.hpp  exit.cpp  exit_f.F90  f90blitz.hpp  f90blitz_f.f90  f90blitz_f.h  f90blitz_f.py  geodesy.cpp  (+15 more)
slib/giss/util/: SparseMatrix.cpp
slib/gissx/: ConstantSet.cpp  CouplingContract.cpp  Dict.hpp  DynArray.hpp  DynamicEnum.cpp  DynamicEnum.hpp  IndexTranslator.cpp  IndexTranslator.hpp  IndexTranslator2.cpp  Proj2.cpp  Proj2.hpp  SparseVector.hpp  VarTransformer.cpp  blitz.hpp  cfnames.cpp  cfnames.hpp  cfnames_data.cpp  constant.hpp  exit.cpp  exit.hpp  f90blitz_f.f90  memory.hpp  ncutil.cpp  ncutil.hpp  sort.hpp  sparse_vec_multiply.hpp  sparsemult.cpp  udunits2.hpp
slib/glint2/: CouplingContract.cpp  CouplingContract.hpp  ExchangeGrid.cpp  ExchangeGrid.hpp  GCMCoupler.cpp  GCMCoupler.hpp  GCMCoupler_MPI.cpp  GCMCoupler_MPI.hpp  GCMParams.cpp  GCMParams.hpp  GCMPerIceSheetParams.hpp  Grid.cpp  Grid.hpp  GridDomain.cpp  GridDomain.hpp  GridDomain_Listed.cpp  GridDomain_Listed.hpp  Grid_LonLat.cpp  Grid_LonLat.hpp  Grid_XY.cpp  Grid_XY.hpp  HCIndex.cpp  HCIndex.hpp  HeightClassifier.cpp  HeightClassifier.hpp  IceModel.cpp  IceModel.hpp  IceModel_DISMAL.cpp  IceModel_DISMAL.hpp  IceModel_Decode.cpp  IceModel_Decode.hpp  IceModel_TConv.cpp  IceModel_TConv.hpp  IceModel_Writer.cpp  IceModel_Writer.hpp  IceSheet.cpp  IceSheet.hpp  IceSheet2.cpp  IceSheet_L0.cpp  IceSheet_L0.hpp  (+20 more)
slib/glint2/contracts/: contracts.cpp  contracts.hpp  modele_dismal.cpp  modele_pism.cpp
slib/glint2/giss/: grids_ll.cpp
slib/glint2/modele/: GCMCoupler_MPI.cpp  GCMCoupler_ModelE.cpp  GCMCoupler_ModelE.hpp  ModelEDomain.hpp  glint2_modele.cpp  glint2_modele.hpp  glint2_modele_f.f90  grids_ll.cpp  grids_ll.hpp  modele_api.cpp  modele_api_f.f90
slib/glint2/pism/: GLINT2EnthalpyConverter.cpp  GLINT2EnthalpyConverter.hpp  IceModel_PISM.cpp  IceModel_PISM.hpp  MassEnergyBudget.cpp  MassEnergyBudget.hpp  PISMIceModel.cpp  (+8 more)
slib/icebin/: #GridDomain.hpp#  AbbrGrid.cpp  AbbrGrid.hpp  ElevMask.cpp  ElevMask.hpp  GCMCoupler.cpp  GCMCoupler.hpp  GCMParams.cpp  GCMParams.hpp  GCMPerIceSheetParams.hpp  GCMRegridder.cpp  GCMRegridder.hpp  Grid.cpp  Grid.hpp  GridSpec.cpp  GridSpec.hpp  IceCoupler.cpp  IceCoupler.hpp  IceModel.hpp  IceModel_Decode.cpp  IceModel_Decode.hpp  IceModel_Writer.cpp  IceModel_Writer.hpp  IceRegridder.cpp  IceRegridder.hpp  IceRegridder_L0.cpp  IceRegridder_L0.hpp  Indexing.hpp  MatrixFactory.hpp  RLWeightedSparse.cpp  RLWeightedSparse.hpp  RegridMatrices.cpp  RegridMatrices.hpp  RegridMatrices_Dynamic.cpp  RegridMatrices_Dynamic.hpp  RegridParams.hpp  RegridSet.hpp  RegridSet_NetCDF.hpp  VarMetaData.hpp  VarSet.cpp  (+18 more)
test/: CMakeLists.txt  test_grid.cpp
tests/: CMakeLists.txt  Z1QX1N.BS1.F  help_hntr.F90  test_grid.cpp  test_hntr.cpp  test_z1qx1n_bs1.cpp
tests/test_conserv/: elev_mask.cdl  makefile  plot_grid_outlines.py  smooth.py  test_conserv.py  write_elev_mask.py  write_icebin_in_base.py  write_matrices.py
tests/test_issm/: example_grid_issm.py  example_mesh.py  example_regrid.py  issm3.cdl  makefile  test_element_l1.py  test_regrid_issm.py  test_regrid_l1.py
(+649 files in other folders)
